--- a/blog/IT/00-CS基础/10-组成原理&体系结构/图灵机.md
+++ b/blog/IT/00-CS基础/10-组成原理&体系结构/图灵机.md
@@ -3,7 +3,7 @@
 图灵机（Turing Machine）是图灵在1936年发表的 "On Computable Numbers, with an Application to the Entscheidungsproblem"（《论可计算数及其在判定性问题上的应用》）中提出的**数学模型**。在文章中图灵描述了它是什么，并且证明了，**只要图灵机可以被实现，就可以用来解决任何可计算问题**。
 
 
-**图灵机将人们使用纸笔进行数学运算的过程进行抽象，由一个虚拟的机器替代人们进行数学运算。**它有一条无限长的纸带，纸带分成了一个一个的小方格，每个方格有不同的颜色。有一个机器头在纸带上移来移去。机器头有一组内部状态，还有一些固定的程序。在每个时刻，机器头都要从当前纸带上读入一个方格信息，然后结合自己的内部状态查找程序表，根据程序输出信息到纸带方格上，并转换自己的内部状态，然后进行移动。
+**图灵机将人们使用纸笔进行数学运算的过程进行抽象，由一个虚拟的机器替代人们进行数学运算**。它有一条无限长的纸带，纸带分成了一个一个的小方格，每个方格有不同的颜色。有一个机器头在纸带上移来移去。机器头有一组内部状态，还有一些固定的程序。在每个时刻，机器头都要从当前纸带上读入一个方格信息，然后结合自己的内部状态查找程序表，根据程序输出信息到纸带方格上，并转换自己的内部状态，然后进行移动。
 
 
 
