--- a/blog/IT/00-CS基础/10-组成原理&体系结构/深入浅出计算机组成原理-1入门篇.md
+++ b/blog/IT/00-CS基础/10-组成原理&体系结构/深入浅出计算机组成原理-1入门篇.md
@@ -11,6 +11,16 @@
 
 ## 开篇词 | 为什么你需要学习计算机组成原理？
 
+
+### 问题：“计算机组成原理”和“操作系统”到底有啥不一样？
+体系结构、操作系统、编译原理以及计算机网络，都可以认为是组成原理的后继课程。体系结构不是一个系统软件，它更多地是讲，如何量化地设计和研究体系结构和指令集。操作系统、编译原理和计算机网络都是基于体系结构之上的系统软件。
+
+其实操作系统也是一个“软件”，而开发操作系统，只需要关注到“组成原理”或者“体系结构”就好了，不需要真的了解硬件。**操作系统，其实是在“组成原理”所讲的“指令集”上做一层封装**。
+
+体系结构、操作系统、编译原理以及计算机网络，都可以认为是组成原理的后继课程。体系结构不是一个系统软件，它更多地是讲，如何量化地设计和研究体系结构和指令集。操作系统、编译原理和计算机网络都是基于体系结构之上的系统软件。
+
+
+
 在硬件 和软件之间需要一座桥梁，而“计算机组成原理”就扮演了这样一个角色，它既隔离了软件 
 和硬件，也提供了让软件无需关心硬件，就能直接操作硬件的接口。
 
@@ -38,6 +48,7 @@ CPU、内存和主板、以及I/O 设备
 比如：计算器的本质是一个不可编程的计算机可“存储”，其实是说，程序本身是存储在计算机的内存里，可以通过加
 载不同的程序来解决不同的问题。
 
+图灵机就是一个抽象的“思维实验”，而冯·诺依曼机就是对应着这个“思维实验”的“物理实现”。如果我们把“图灵机”当成“灵魂”，代表计算机最抽象的本质，那么“冯诺伊曼机”就是“肉体”，代表了计算机最具体的本质。这两者之间颇有理论物理学家和实验物理学家的合作关系的意思，可谓是一个问题的两面。
 
 任何一台计算机的任何一个部件都可以归到**运算器、控制器、存储器、输入设备和输出设备**
 中，而所有的现代计算机也都是基于这个基础架构来设计开发的。
@@ -57,7 +68,7 @@ CPU、内存和主板、以及I/O 设备
 发层面怎么尽可能用好它。
 
 
-冯·诺依曼机和图灵机的区别（Turing Machine）？
+冯·诺依曼机和[[图灵机]]的区别（Turing Machine）？
 > 冯·诺依曼机侧重于硬件抽象，而图灵机侧重于计算抽象。
 
 
