--- a/blog/IT/00-CS基础/30-编译原理/编程语言方方面面.md
+++ b/blog/IT/00-CS基础/30-编译原理/编程语言方方面面.md
@@ -1,4 +1,15 @@
 
+## 编程范式
+* 命令式语言,面向过程式语言(c)
+* 面向对象语言(c++)
+* 函数式语言(lisp)
+* 逻辑式语言(Prolog)
+* 并发语言(Erlang) 
+* 说明型语言(SQL) 
+*  领域专用语言（DSL）  
+
+
+
 ## 语言的学习路线
 
 * 学习资源
