--- a/blog/IT/00-CS基础/30-编译原理/编译原理之美.md
+++ b/blog/IT/00-CS基础/30-编译原理/编译原理之美.md
@@ -1,6 +1,5 @@
-github: https://github.com/RichardGong/PlayWithCompiler
 
-
+[github代码地址](https://github.com/RichardGong/PlayWithCompiler)
 
 
 ## 开篇词 | 为什么你要学习编译原理？
