--- a/blog/IT/00-CS基础/黑客.md
+++ b/blog/IT/00-CS基础/黑客.md
@@ -1,7 +1,3 @@
-# 如何成为一名黑客
-> 如何成为一名黑客  作者：Eric Steven Raymond
-> https://translations.readthedocs.io/en/latest/hacker_howto.html
-
 
 ## 什么是黑客？
 Jargon File 讲了一堆关于“hacker”这个词的定义，大部分是关于“技术高超”、“热衷解决问题”、以及“超越极限”的内容。
@@ -53,3 +49,5 @@ LISP 值得学习的理由不同——最终掌握了它时你会得到丰富的
 
 
 
+## 参考链接
+- [如何成为一名黑客](https://translations.readthedocs.io/en/latest/hacker_howto.html)
