--- a/blog/IT/60-其他主题/软件工程/游戏更新流程.md
+++ b/blog/IT/60-其他主题/软件工程/游戏更新流程.md
@@ -1,114 +1,134 @@
-
-
+  
 【一、更新发起】
+
 运营和研发均可发起更新：
+
 1、运营，提出新的版本更新需求或者运营活动等。
+
 2、研发，发现bug或者缺陷进行修复，再或者优化等。
 
+  
 
 【二、确认更新】
+
 版本更新内容由运营和研发双方负责人一起敲定，单方面更新或者改动引起事故，要查明责任，明确到人，以防后患。
+
 更新内容以合理和有效为主旋律。
 
+  
 
 【三、研发出版】
+
 1、研发制作，研发需要在双方敲定的时间内完成计划更新任务
+
 2、研发自测，在交版前需严谨的完善的对版本进行测试，对新增内容进行单元测试、集成测试、系统测试等；对老内容的修改要进行回归测试；测试完成后才可交版
 
+  
 
 【四、运营验收】
+
 运营上测试服验收研发更新的内容，需要做几件事：
+
 1、确认验收版本内容。
+
 2、测试版本内容（研发可提供GM命令，协助运营快速测试和验收）。
 
+  
 
 【五、更新通知】
+
 运营确定更新后，需要与研发和运维进行商议，确定更新时间和操作时间（运维操作）。
+
 运营确认无误后，发邮件通知给大家（回复研发的版本交付邮件）：
+
 1、用户，告知用户更新内容和停服时间（热更新可能不停服）。
+
 2、研发，研发需要知道具体什么时候更新，好提前安排人来协助配合更新。
+
 3、运维，要留给运维充足的时间进行操作，运维也好调度和提前安排。
+
 4、研发将版本交付邮件发给运营&运维，格式如下：
 
+  
 
 ```
 
-Dear all ：
+**Dear all****：**
 
-
-
-版本名：
+**版本名：**
 
 《狂暴之翼》m月d日服务器热更新
 
+  
 
+**更新目的：**
 
+**+**
 
-更新目的：
-
-+
-
-维护区服：
+**维护区服：**
 
 全区服
 
+**更新时间：**
 
+hh:mm（热更，不停服）
 
-更新时间：
+**更新内容：**
 
-hh:mm （热更，不停服）
-
-
-
-更新内容：
-
-1 、aaa
+1、aaa
 
 2、bbb
 
+**【****版本交付目录】**
 
-
-
-【 版本交付目录】
-
-http://un.devsvn.youzu.com/svn/kuangbaozhiyi/code/app_code
+[http://un.devsvn.youzu.com/svn/kuangbaozhiyi/code/app_code](http://un.devsvn.youzu.com/svn/kuangbaozhiyi/code/app_code)
 
 版本号:n
 
 全覆盖服务器文件
 
+  
 
-
-
-【更新适用范围】
+**【更新适用范围】**
 
 正式游戏服，运营测试游戏服。
 
+  
 
+**【操作步骤】**
 
-【操作步骤】
-
-1.  aaa
+1. aaa
 
 2.bbb
 
 {图片}
+
 ```
 
+  
 
 【六、运维操作】
+
 运维根据运营的更新邮件里的内容进行操作，操作完通知运营，需在正式开服前搞定。
 
+  
 
 【七、运营体验】
+
 运营要在运维操作完之后，在正式开服之前（玩家进入之前），提前进入游戏测试（冒烟测试）。
+
 简单的确认可以登录和功能操作，还有充值即可（因更严谨的测试已在之前做过，只是再确认一遍）。
 
+  
 
 【八、对外开放】
+
 当运营体验完之后，没问题即可对外开放。
 
+  
 
 流程图
 
- 
+  
+
+ ![](https://sunxvming.com/imgs/0.15413482416903723.png)
