--- a/blog/IT/10-编程语言/java/android/零碎.md
+++ b/blog/IT/10-编程语言/java/android/零碎.md
@@ -13,7 +13,7 @@ ADT（Android Development Tools）是一种安卓开发工具。
 
 
 adb shell  可进入手机系统的终端      sqlite3  xxx.db 进入sqlite的命令行终端
-![](https://sunxvming.com/imgs/2523f016-8b19-49fd-b738-bda4d7d80390.png)  ![](https://sunxvming.com/imgs/d5a0de55-43ed-4489-8889-3f037bfd4e2f.png)   第一个是android的test ，第二个是junit test
+![](https://sxm-upload.oss-cn-beijing.aliyuncs.com/imgs/2523f016-8b19-49fd-b738-bda4d7d80390.png)  ![](https://sxm-upload.oss-cn-beijing.aliyuncs.com/imgs/d5a0de55-43ed-4489-8889-3f037bfd4e2f.png)   第一个是android的test ，第二个是junit test
 
 
 
